# qendering

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
crates/qendering-core/: Cargo.toml
crates/qendering-core/src/: dds.rs  discovery.rs  error.rs  filename.rs  lib.rs  rsc7.rs  texture.rs  ytd.rs
crates/qendering-render/: Cargo.toml
crates/qendering-render/src/: lib.rs
docs/: qendering.webm
python/: blender_render.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
