[package]
name = "qendering-core"
version = "0.1.0"
edition = "2021"
description = "Core logic for Qendering: GTA V asset parsing, discovery, and image output."

[dependencies]
regex = "1"
walkdir = "2"
flate2 = "1"
thiserror = "2"
image = "0.25"
image_dds = "0.7"
webp = "0.3"

[dev-dependencies]
tempfile = "3"
