[package]
name = "qendering-core"
version = "0.1.0"
edition = "2021"
description = "Core logic for Qendering: GTA V asset parsing, discovery, and image output."

[dependencies]
regex = "1"
walkdir = "2"
flate2 = "1"
thiserror = "2"
# Only PNG/JPEG encoders are needed (WebP goes through the `webp` crate).
# Disabling default features drops AVIF/EXR/etc. (ravif/rav1e), which are very
# slow to compile in release and would balloon CI build time.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
image_dds = "0.7"
webp = "0.3"

[dev-dependencies]
tempfile = "3"
